--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^3.3.2",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.12.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
