--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@luigi-project/client": "^1.0.0",
-    "@luigi-project/core": "^1.0.0",
-    "@luigi-project/plugin-auth-oauth2": "^1.0.0",
-    "fundamental-styles": "^0.7.0"
+    "@luigi-project/client": "^1.4.0",
+    "@luigi-project/core": "^1.4.0",
+    "@luigi-project/plugin-auth-oauth2": "1.4.0",
+    "@sap-theming/theming-base-content": "^11.1.22",
+    "fundamental-styles": "^0.11.2",
+    "live-server": "^1.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "babel-loader": "^8.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
@@ -28,13 +30,13 @@
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.12.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "keywords": [],
   "description": ""
