--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.3.2",
-    "file-loader": "^5.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "http-server": "^0.12.0",
-    "mini-css-extract-plugin": "^0.8.0",
+    "copy-webpack-plugin": "^6.2.1",
+    "css-loader": "^5.0.0",
+    "file-loader": "^6.1.1",
+    "html-webpack-plugin": "^4.5.0",
+    "http-server": "^0.12.3",
+    "mini-css-extract-plugin": "^1.2.0",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^10.0.4",
     "style-loader": "^1.0.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "terser-webpack-plugin": "^5.0.1",
+    "webpack": "^5.2.0",
+    "webpack-cli": "^4.1.0"
   },
   "keywords": [],
   "description": ""
